--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 
             // Go to WhatsApp:
-            // window.location = "https://wa.me/" + sInput;
-            document.getElementById("tbInput").value = sInput;
+             window.location = "https://wa.me/" + sInput;
+            //document.getElementById("tbInput").value = sInput;
 
         }
     
