--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Let Luai WhatsApp</title>
 </head>
 <body>
-    <p>Hi There</p>
+    <p>Let Luai WhatsApp</p>
 
-    <input type="tel" id = "tbInput" />
+    <input type="tel" id = "tbInput" placeholder="Add international phone number here..." />
     <button onclick="fProcess();" >Go</button>
 
 
