--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>Let Luai WhatsApp</p>
 
-    <input type="tel" id = "tbInput" placeholder="Add international phone number here..." />
+    <input type="tel" id = "tbInput" placeholder="Add phone number here..." />
     <button onclick="fProcess();" >Go</button>
 
 
