--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let Luai WhatsApp</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GF5H0TZNJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5GF5H0TZNJ');
+    </script>
+
 </head>
 <body>
     <p>Let Luai WhatsApp</p>
 
+    
     <input type="tel" id = "tbInput" placeholder="Add phone number here..." />
+    <p></p>
     <button onclick="fProcess();" >Go</button>
 
 
